docs(company): open api for companies
open api for companies index and store
